--- a/globals.css
+++ b/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/*We use @apply to override the default styles of elements*/
+
 html{
   @apply scroll-smooth h-full w-full;
 }
